--- a/main_app/templates/main.html
+++ b/main_app/templates/main.html
@@ -10,18 +10,33 @@
 </head>
 <body>
 
-    {% include "includes/navbar.html" %} 
-    
+        <!-- Header -->
+        <header>
 
-    {% block Content %}
-      
-    {% endblock Content %}
+            {% include "includes/navbar.html" %} 
+
+        </header>
+        <!-- Header -->
+        
+
+        {% block Content %}
+        
+        {% endblock Content %}
 
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+
+        <!-- footer -->
+
+        <footer>
+
+            {% include "includes/footer.html" %} 
+        </footer>
 
 </body>
 </html>
