--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,7 +7,7 @@
 {% block Content %}
 
 <div id="intro" class=" p-5 text-center bg-image shadow-1-strong"
-      style="background-image: url('https://mdbootstrap.com/img/new/slides/205.jpg');height: 610px;background-repeat: no-repeat;background-size: cover;">
+      style="background-image: url('https://mdbootstrap.com/img/new/slides/205.jpg');height: 500px;background-repeat: no-repeat;background-size: cover;">
       <div class="mask h-100" style="background-color: rgba(0, 0, 0, 0.7);">
             <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white px-4">
@@ -18,7 +18,7 @@
 
                 <p>Until then have a look at our Free Bootstrap 5 tutorials</p>
 
-                <a class="btn btn-outline-light btn-lg m-2" href="{% url 'download' %}" role="button"
+                <a class="btn btn-outline-light btn-lg m-2" href="{% url 'home' %}" role="button"
                 rel="nofollow">Download App</a>
                 <a class="btn btn-outline-light btn-lg m-2" href="{% url 'login' %}" 
                 role="button">Log-in</a>
