--- a/main_app/templates/Auth/register.html
+++ b/main_app/templates/Auth/register.html
@@ -3,6 +3,35 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
 {% load crispy_forms_tags %} 
+
+<!-- navbar -->
+
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+
+    <div class="container">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}">MSMM</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
+          <ul class="navbar-nav ">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="{% url 'register' %}">Register</a>
+            </li>
+           
+        </div>
+      </div>
+    </div>
+  </nav>
+  
+  <!-- navbar -->
 <div class="container mt-5 border">
 
     <h1>Register</h1>
