--- a/main_app/templates/includes/navbar.html
+++ b/main_app/templates/includes/navbar.html
@@ -1,21 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
 
   <div class="container">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">MSMM</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container d-flex">
+      <a class="navbar-brand" href="{% url 'home' %}">MSMM</a>
+      <button class="navbar-toggler nav-icon" type="button" >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse  position-absolute top-50 start-50 translate-middle-y" id="navbarSupportedContent">
+      <div class="" id="navbarSupportedContent">
         <ul class="navbar-nav ">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'download' %}">Download</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'about_us' %}">Contact-US</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'contact_us' %}">Contact-US</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a>
