--- a/me/templates/editInfo.html
+++ b/me/templates/editInfo.html
@@ -3,6 +3,7 @@
 
 
 
+{% load crispy_forms_tags %} 
 
 {% block Content %}
 
@@ -13,16 +14,19 @@
     
 
 
-        <form action="" method="POST" enctype="multipart/form-data">
+        <div class="m-5">
+            <div class="mt-5"><h1>Edit Informations</h1></div>
+            <form action="" method="POST" enctype="multipart/form-data">
 
 
-            {% csrf_token %}
-            {{form.as_p}}
-
-            <input type="submit" class="btn btn-primary">
-
-
-        </form>
+                {% csrf_token %}
+                {{form|crispy}}
+    
+                <input type="submit" class="btn btn-primary">
+    
+    
+            </form>
+        </div>
       
       
     
