--- a/ste/templates/editInfo.html
+++ b/ste/templates/editInfo.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 
-
+{% load crispy_forms_tags %} 
 
 {% block Content %}
 
-<div class="container">
+<div class="container mt-5">
 
 
     
@@ -15,9 +15,9 @@
 
         <form action="" method="POST" enctype="multipart/form-data">
 
-
             {% csrf_token %}
-            {{form.as_p}}
+
+            {{form.as_p|crispy}}
 
             <input type="submit" class="btn btn-primary">
 
@@ -25,7 +25,7 @@
         </form>
       
       
-    
+    fdvfbdf
     
     
     
