--- a/post/templates/delete_confirmation.html
+++ b/post/templates/delete_confirmation.html
@@ -1,4 +1,4 @@
-{% extends "main_Auth.html" %} 
+{% extends "main_authenticated.html" %} 
 {% load static %}
 
 
@@ -9,13 +9,13 @@
 
 <div class="container pt-5">
     <h2>are you sure ?</h2>
-    <a class="btn-success" href="{% url 'posts' %}">Cancel</a>
+    <a class="btn btn-success mb-3" href="{% url 'posts' %}">Cancel</a>
 
     
 
     <form method="POST">
         {% csrf_token %}
-        <button type="submit" class="btn btn-primary">DELETE</button>
+        <button type="submit" class="btn btn-danger">DELETE</button>
     </form>
 
   
