--- a/post/templates/posts.html
+++ b/post/templates/posts.html
@@ -1,4 +1,4 @@
-{% extends "main_Auth.html" %} 
+{% extends "main_authenticated.html" %} 
 {% load static %}
 
 
@@ -7,234 +7,115 @@
 
 {% block Content %}
 
+<link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+
+<link rel="stylesheet" href="{% static 'css/posts.css' %}">
 
 
 
-<!-- Jumbotron -->
-<div id="intro" class="p-5 text-center bg-light">
-    <h1 class="mb-3 h2">Learn Bootstrap 5 with MDB</h1>
-    <p class="mb-3">Best & free guide of responsive web design</p>
 
-    {% if request.user.societe %}
-        <a href="{% url 'create' %}" class="btn btn-success position-absolute top-0 end-0 ">Create</a>
-    {% endif %}
-
-    <form class="container">         
-
-        <span class="badge bg-dark ml-5 w-100">
-            <h5 class="w-50">{{filter_Ste.form.create_at|as_crispy_field}}</h5>  
-            <button class="btn btn-outline-success" type="submit">Search</button>
-        </span> 
-
+<div class="container mt-5">
+      <div class="row">
+        <!-- Main content -->
+        <div class="col-lg-9 mb-3">
+          <div class="row text-left mb-5">
+            <div class="col-lg-15 mb-3 mb-sm-0">
+              <div class="dropdown bootstrap-select form-control form-control-lg bg-white bg-op-9 text-sm w-lg-50" style="width: 100%;">
+                
             
-    </form>
-</div>
-    <!-- Jumbotron -->
-
-
-<main class="my-5">
-    <div class="container">
-      <!--Section: Content-->
-      <section class="text-center">
-        <h4 class="mb-5"><strong>Posts</strong></h4>
-
-
-
-            {% for post in page_objAll %}
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card">
-                    <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                        <img src="https://mdbootstrap.com/img/new/standard/nature/023.jpg" class="img-fluid" />
-                        <a href="#!">
-                        <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-                        </a>
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            {{post.ste.name_STE|upper}} :
-                            <span class="badge bg-dark">{{post.title|upper}}</span> 
-                        </h5>
-                        <p class="card-text">
-                            {{post.Description|upper}}
-                        </p>
-                        <a href="{% url 'post' post.id %}" class="btn btn-primary">Show</a>
-                    </div>
-                    </div>
-                </div>
-            {% endfor %}
-
-
-        </div>
-      </section>
-      <!--Section: Content-->
-
-      <!-- Pagination -->
-      <nav class="my-4" aria-label="...">
-        <ul class="pagination pagination-circle justify-content-center">
-          <li class="page-item">
-            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
-
-                {% if page_obj.has_previous %}
-                    <a href="?page=1">&laquo; first</a>
-                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                {% endif %}
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item active" aria-current="page">
-            <a class="page-link" href="#">2 <span class="sr-only">
-                <span class="current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                </span>
-            </span></a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#">
-                {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">next</a>
-                    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-                {% endif %}
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="container">
-
-    
-
-    
-
-
-    
-      
-    <div class="card mt-5">
-        <div class="card-header position-relative p-3">
-          Featured
-
-          {% if request.user.societe %}
-
-          <a href="{% url 'create' %}" class="btn btn-success position-absolute top-0 end-0 ">Create</a>
-
+                <form class="container d-flex justify-content-between">        
+                        <h5 class="w-75 ">{{filter_Ste.form.create_at|as_crispy_field}}</h5>  
+                        <button class="btn btn-outline-success" type="submit">Search</button>
             
-          {% endif %}
-
-        </div>
-        <div class="card-body">
-            <div class="container">
-                <div class="row w-100">
-
-                  <div class="col  border border-secondary d-flex">
-                    <div class="card m-3 badge bg-dark w-100 d-flex">
-
-                        <form class="">         
-
-                            <span class="badge bg-dark ml-5"><h5>{{filter_Ste.form.create_at|as_crispy_field}}</h5>  </span> 
-
-                             <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
-                    </div>
-
-                  </div>
-                </div>
-                <div class="row w-100">
-
-                   
-                    <div class="col  p-3  border border-secondary flex-grow-1 m-auto">
-                        {% for post in page_objAll %}
-  
-                          <div class="card w-80 m-5">
-                              <div class="card-header">
-                                  {{post.ste.name_STE|upper}} :
-                                  <span class="badge bg-dark">{{post.title|upper}}</span> 
-                                  <div>
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        ...
-                                      </a>
-                                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="#">Edit</a></li>
-                                        <li><a class="dropdown-item" href="#">Delete</a></li>
-                                      </ul>
-                                  </div>
-                              </div>
-
-                              <div class="card-body">
-                                  <h5 class="card-title"><span>Date d'expiration</span> : {{post.date_experation|upper}}</h5>
-                                  <p class="card-text">{{post.Description|upper}}</p>
-                                  <a href="{% url 'post' post.id %}" class="btn btn-primary">Show</a>
-                              </div>
-                          </div>
-                          
-                        {% endfor %}
-
-
                         
-  
-                    </div>
-                  </div>
+                </form>
+              </div>
             </div>
+            
+          </div>
+          <!-- End of post 1 -->
+          {% for post in page_objAll %}
+
+          <div class="card row-hover pos-relative py-3 px-3 mb-3 border-warning border-top-0 border-right-0 border-bottom-0 rounded-0">
+            <div class="row align-items-center">
+              <div class="col-md-8 mb-3 mb-sm-0">
+                <h5 class="fw-bolder">
+                    {{post.ste.name_STE|upper}} :
+                    <span class="badge bg-dark">{{post.title|upper}}</span> 
+                </h5>
+                <p class="text-sm">Date D'expiration : {{post.date_experation}}</p>
+              </div>
+              <div class="col-md-4 op-7">
+                <div class="row text-center op-7">
+                  <div class="col px-1"> <i class="fas fa-user-plus"></i> <span class="d-block text-sm">{{post.count_Dommand}} </span> </div>
+                </div>
+              </div>
+            </div>
+            <div class="col px-1 mt-3"> <a href="{% url 'post' post.id %}" class="btn btn-primary">Show</a></div>
+          </div>
+
+          {% endfor %}
+          <!-- /End of post 1 -->
+          
         </div>
-    </div> -->
-
-
-
-
-
-
-
-    <!-- paginator -->
-    <!-- <div class="pagination ">
-        <span class="step-links">
-            {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        <!-- Sidebar content -->
+        <div class="col-lg-3 mb-4 mb-lg-0 px-lg-0 mt-lg-0">
+          <div style="visibility: hidden; display: none; width: 285px; height: 801px; margin: 0px; float: none; position: static; inset: 85px auto auto;"></div><div data-settings="{&quot;parent&quot;:&quot;#content&quot;,&quot;mind&quot;:&quot;#header&quot;,&quot;top&quot;:10,&quot;breakpoint&quot;:992}" data-toggle="sticky" class="sticky" style="top: 85px;"><div class="sticky-inner">
+            {% if request.user.societe %}
+                <a href="{% url 'create' %}" class="btn btn-success mb-5">Create</a>
             {% endif %}
-
-            <span class="current">
-                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-            </span>
-
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">next</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
+            <div class="bg-white mb-3">
+              <h4 class="px-3 py-4 op-5 m-0">
+                Active Topics
+              </h4>
+              <hr class="m-0">
+              <div class="pos-relative px-3 py-3">
+                <h6 class="text-primary text-sm">
+                  <a href="#" class="text-primary">Why Bootstrap 4 is so awesome? </a>
+                </h6>
+                <p class="mb-0 text-sm"><span class="op-6">Posted</span> <a class="text-black" href="#">39 minutes</a> <span class="op-6">ago by</span> <a class="text-black" href="#">AppStrapMaster</a></p>
+              </div>
+              <hr class="m-0">
+              <div class="pos-relative px-3 py-3">
+                <h6 class="text-primary text-sm">
+                  <a href="#" class="text-primary">Custom shortcut or command to launch command in terminal? </a>
+                </h6>
+                <p class="mb-0 text-sm"><span class="op-6">Posted</span> <a class="text-black" href="#">58 minutes</a> <span class="op-6">ago by</span> <a class="text-black" href="#">DanielD</a></p>
+              </div>
+              <hr class="m-0">
+              <div class="pos-relative px-3 py-3">
+                <h6 class="text-primary text-sm">
+                  <a href="#" class="text-primary">HELP! My Windows XP machine is down </a>
+                </h6>
+                <p class="mb-0 text-sm"><span class="op-6">Posted</span> <a class="text-black" href="#">48 minutes</a> <span class="op-6">ago by</span> <a class="text-black" href="#">DanielD</a></p>
+              </div>
+              <hr class="m-0">
+              <div class="pos-relative px-3 py-3">
+                <h6 class="text-primary text-sm">
+                  <a href="#" class="text-primary">HELP! My Windows XP machine is down </a>
+                </h6>
+                <p class="mb-0 text-sm"><span class="op-6">Posted</span> <a class="text-black" href="#">38 minutes</a> <span class="op-6">ago by</span> <a class="text-black" href="#">DanielD</a></p>
+              </div>
+              <hr class="m-0">
+            </div>
+            <div class="bg-white text-sm">
+              <h4 class="px-3 py-4 op-5 m-0 roboto-bold">
+                Stats
+              </h4>
+              <hr class="my-0">
+              <div class="row text-center d-flex flex-row op-7 mx-0">
+                <div class="col-sm-6 flex-ew text-center py-3 border-bottom border-right"> <a class="d-block lead font-weight-bold" href="#">58</a> Topics </div>
+                <div class="col-sm-6 col flex-ew text-center py-3 border-bottom mx-0"> <a class="d-block lead font-weight-bold" href="#">1.856</a> Posts </div>
+              </div>
+              <div class="row d-flex flex-row op-7">
+                <div class="col-sm-6 flex-ew text-center py-3 border-right mx-0"> <a class="d-block lead font-weight-bold" href="#">300</a> Members </div>
+                <div class="col-sm-6 flex-ew text-center py-3 mx-0"> <a class="d-block lead font-weight-bold" href="#">DanielD</a> Newest Member </div>
+              </div>
+            </div>
+          </div></div>
+        </div>
+      </div>
     </div>
-    
-    
-</div> -->
 
 
 
