--- a/ste/templates/p_STE.html
+++ b/ste/templates/p_STE.html
@@ -1,4 +1,4 @@
-{% extends "main_Auth.html" %} 
+{% extends "main_authenticated.html" %} 
 {% load static %}
 
 
@@ -6,50 +6,92 @@
 
 {% block Content %}
 
-<div class="container">
+<link rel="stylesheet" href="{% static 'css/p_STE.css' %}">
 
 
-    <div class="card mb-3">
 
 
-            <h3 class="card-header">
-                <div><img src="{{ste.photo.url}}" width="100%" height="400px" alt=""></div>
-            </h3>
-            <div class="card-body">
-            <h5 class="card-title">{{ste.name_STE}}</h5>
-            <h6 class="card-subtitle text-muted">{{ste.desc}}</h6>
-            <div>
-                <span class="badge bg-success">{{ste.domaine}}</span>
-                <span class="badge bg-success">{{ste.web_Site}}</span>
 
-            </div>
-            <div>
-                <span class="badge bg-warning">Adress</span>
-                <div style="width:50%;height: 150px;border: 0.5px solid;"></div>
-            </div>
-            <div>
-                <span class="badge bg-primary">Posts</span>
-                <div style="width:50%;height: 150px;border: 0.5px solid;padding: 10px;">
-                    <div style="width:30%;height: 40px;border: 0.5px solid;" ></div>
-                    <div style="width:30%;height: 40px;border: 0.5px solid;" ></div>
-                    <div style="width:30%;height: 40px;border: 0.5px solid;" ></div>
+
+<section class="section about-section gray-bg " id="about">
+    <div class="container">
+        <div class="row align-items-center flex-row-reverse">
+            <div class="col-lg-6">
+                <div class="about-text go-to">
+                    <h3 class="dark-color">Profile Information</h3>
+                    <h5 class="theme-color lead">{{ste.name_STE}}</h5>
+                    <p>{{ste.desc}}</p>
+                    <div class="row about-list">
+                        <div class="col-md-6">
+                            <div class="media">
+                                <label  class="fw-bold">Web site :</label>
+                                <p>{{ste.web_Site}}</p>
+                            </div>
+                            <div class="media">
+                                <label  class="fw-bold">Ville :</label>
+                                <p>{{ste.ville}}</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="media">
+                                <label  class="fw-bold">E-mail :</label>
+                                <p>{{request.user.email}}</p>
+                            </div>
+                            <div class="media">
+                                <label  class="fw-bold">Phone :</label>
+                                <p>{{ste.phone}}</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="col-lg-6">
+                <div class="about-avatar">
+                    <img src="{{ste.photo.url}}" title="" alt="">
+                </div>
             </div>
-        </div>  
-    
+        </div>
+        <div class="counter">
+            <div class="row">
+                <div class="col-6 col-lg-3">
+                    <div class="count-data text-center">
+                        <h6 class="count h2" data-to="500" data-speed="500">{{posts|length}}</h6>
+                        <p class="m-0px font-w-600">Posts</p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <div class="count-data text-center">
+                        <h6 class="count h2" data-to="150" data-speed="150">
+                            {% if ste.active == false %}
+                                No active
+                            {% else %}
+                                Active
+                            {% endif %}
+                        </h6>
+                        <p class="m-0px font-w-600">Active/No</p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <div class="count-data text-center">
+                        <h6 class="count h2" data-to="850" data-speed="850">{{date}}</h6>
+                        <p class="m-0px font-w-600">with us </p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <div class="count-data text-center">
+                        <h6 class="count h2" data-to="190" data-speed="190">
+                            {{ste.domaine}}
+                        </h6>
+                        <p class="m-0px font-w-600">Domaine</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
-      
-      
-    
-    
-    
-    
-    
-    
-</div>
 
 
 
