last push from HDD

--- a/ste/templates/editInfoSTE.html
+++ b/ste/templates/editInfoSTE.html
@@ -1,4 +1,4 @@
-{% extends "main_authenticated.html" %} 
+{% extends "main_Auth.html" %} 
 {% load static %}
 
 
@@ -8,9 +8,6 @@
 
 <div class="container mt-5">
 
-
-    
-    
 
 
         <form action="" method="POST" enctype="multipart/form-data">
@@ -25,7 +22,7 @@
         </form>
       
       
-    fdvfbdf
+    
     
     
     
