--- a/main_app/templates/main_Auth.html
+++ b/main_app/templates/main_Auth.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/login_style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/register_style.css' %}">
 
+    <script type="text/javascript">
+        window.history.forward();
+        function noBack() {
+            window.history.forward();
+        }
+    </script>
 
 </head>
 <body>
