--- a/me/templates/editInfo.html
+++ b/me/templates/editInfo.html
@@ -1,44 +1,74 @@
-{% extends "main_authenticated.html" %} 
 {% load static %}
 
 
 
 {% load crispy_forms_tags %} 
 
-{% block Content %}
 
-<div class="container">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MSMM</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/navbars/">
+    <link rel="stylesheet" href="{% static 'css/main_authenticated.css' %}">
+</head>
+<body >
 
 
-    
-    
 
 
-        <div class="m-5">
-            <div class="mt-5"><h1>Edit Informations</h1></div>
-            <form action="" method="POST" enctype="multipart/form-data">
+        
+
+        <div class="container">
 
 
-                {% csrf_token %}
-                {{form|crispy}}
-    
-                <input type="submit" class="btn btn-primary">
-    
-    
-            </form>
+            <div class="card bg-secondary border-secondary mb-5 mt-5">
+                <div class="card-header">Complet your Informations please !!!</div>
+                <div class="card-body">
+                    <div class="m-5">
+                        <div class="mt-5"><h1></h1></div>
+                        <form action="" method="POST" enctype="multipart/form-data">
+            
+            
+                            {% csrf_token %}
+                            {{form|crispy}}
+                
+                            <input type="submit" value="Next" class="btn btn-primary mt-3">
+                
+                
+                        </form>
+                    </div>
+                </div>
+              </div>
+        
+                
+              
+              
+            
+            
+            
+            
+            
+            
         </div>
-      
-      
-    
-    
-    
-    
-    
-    
-</div>
 
 
 
 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-{% endblock Content %}
+
+        <!-- footer -->
+
+            {% include "includes/footer.html" %} 
+
+
+</body>
+</html>
