reset password Done

--- a/main_app/templates/Auth/login.html
+++ b/main_app/templates/Auth/login.html
@@ -20,6 +20,7 @@
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
               <li class="breadcrumb-item "><a href="{% url 'register' %}">Register</a></li>
+              <li class="breadcrumb-item "><a href="{% url 'reset_password' %}">password forgot</a></li>
             </ol>
           </div>
               <div class="card-body">
