--- a/ste/templates/societes.html
+++ b/ste/templates/societes.html
@@ -33,7 +33,7 @@
         <!-- project -->
 
 
-        {% for ste in page_objAll %}
+        {% for ste in page_obj %}
 
             {% if ste.id == request.user.societe.id %}
 
@@ -102,23 +102,23 @@
     </ul>
     <!-- / portfolio -->
 
-<div class="pagination">
-    <span class="step-links">
-        {% if page_obj.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-        {% endif %}
-
-        <span class="current">
-            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+    <div class="pagination  d-flex justify-content-center">
+        <span class="step-links badge bg-secondary bg-dark p-2 m-3">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            {% endif %}
+      
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+            </span>
+      
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
         </span>
-
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-        {% endif %}
-    </span>
-</div>
+      </div>
 </div>
 
 
