--- a/main_app/templates/Auth/login.html
+++ b/main_app/templates/Auth/login.html
@@ -11,9 +11,9 @@
   <div class="container content_login mt-5">
 
 
-    <div class=" container_login">
+    <div class=" container_login ">
 
-        <div class="card text-white bg-dark mb-3 card_login" >
+        <div class="card text-white bg-dark mb-3  card_login" >
           <div class="card-header text-center">
             <h1 class="fs-3 fw-bolder">Login</h1>
 
@@ -36,7 +36,13 @@
                       <label for="exampleInputPassword1" class="form-label">Password</label>
                       <input type="password" name="password" class="form-control" >
                     </div>
+
+                    <script src="https://www.google.com/recaptcha/api.js"></script>
+                    <div class="g-recaptcha" data-sitekey="6LetdmceAAAAAH0RkxZTApP0WjKcIOHX0nQYkBYw"></div>
+
                     <button type="submit" class="btn btn-primary">Login</button>
+
+                    
                 </form>
               </div>
         </div>
