--- a/main_app/templates/Auth/register.html
+++ b/main_app/templates/Auth/register.html
@@ -36,6 +36,9 @@
                   <input type="hidden" name="who" id="who" value="STE">
 
 
+                  <script src="https://www.google.com/recaptcha/api.js"></script>
+                  <div class="g-recaptcha" data-sitekey="6LetdmceAAAAAH0RkxZTApP0WjKcIOHX0nQYkBYw"></div>
+
                   <button type="submit" class="btn btn-primary mt-3">Submit</button>
 
                   {{form.errors}}
